Revert "Registro + crud admin"
This reverts commit d9f7343f20641f7fd8e32d8e9168cb8e1969118c.

--- a/Registro.html
+++ b/Registro.html
@@ -2,40 +2,14 @@
 <html lang="en">
 <head>
     <title>Registro</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="assets/styles/css/Registro.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/styles/css/footerdef.css">
-    <link rel="stylesheet" href="assets/styles/css/Navbar.css">
-    <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
-    <div class="menu-cont">
-        <header>
-          <nav class="navbar">
-            <input type="checkbox" id="check" >
-            <label for="check" class="checkbtn">
-              <i class="fa-solid fa-bars"></i>
-            </label>
-            <a href="#" class="enlace">
-              <img class="logo" src="assets/img/logo.png" />
-            </a>          
-            <h1 class="brand">TEXTO</h1>
-            <ul class="elements">
-              <li class="element"><a href="index.html" class="a-menu">Home</a></li>
-              <li class="element"><a href="#" class="a-menu">Cursos</a></li>
-              <li class="element"><a href="#" class="a-menu">Iniciar sesión</a></li>
-              <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
-              <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
-              <li class="element"><a href="#" class="a-menu">FAQ</a></li>
-            </ul>
-          </nav>
-        </header>
-      </div>
-      <br>
-      <br>
+    <header>
+
+    </header>
 
     <section>
         <div class="Fondo-Blanco"> 
@@ -81,48 +55,8 @@
     </section>
 
 
-    <footer class="footer">
-        <div class="container-foo">
-          <div class="row">
-            <div class="footer-col">
-              <h4>Company</h4>
-              <ul class="ul-foo">
-                <li><a href="#" class="a-foo">Sobre nosotros</a></li>
-                <li><a href="#" class="a-foo">Nuestros servicios</a></li>
-                <li><a href="#" class="a-foo">politica de privacidad</a></li>
-                <li><a href="#" class="a-foo">Cursos</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Obtener ayuda</h4>
-              <ul class="ul-foo">
-                <li><a href="#" class="a-foo">FAQ</a></li>
-                <li><a href="#" class="a-foo">Precios</a></li>
-                <li><a href="#" class="a-foo">Reportar pago</a></li>
-                <li><a href="#" class="a-foo">Consultar notas</Canvas></a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Registrarse</h4>
-              <ul class="ul-foo">
-                <li><a href="#" class="a-foo">Registrarse</a></li>
-                <li><a href="#" class="a-foo">Iniciar Secion</a></li>
-                <li><a href="#" class="a-foo">Plataforma online</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Siguenos</h4>
-              <div class="social-links">
-                <a href="#" class="a-foo"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-whatsapp"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-</footer>
-
+    <footer>    
+    </footer>
 </body>    
 
 </html>
