--- a/acercaDe.html
+++ b/acercaDe.html
@@ -54,9 +54,7 @@
         <div class="footer-col">
           <h4>Company</h4>
           <ul class="ul-foo">
-            <li><a href="#" class="a-foo">Sobre nosotros</a></li>
-            <li><a href="#" class="a-foo">Nuestros servicios</a></li>
-            <li><a href="#" class="a-foo">politica de privacidad</a></li>
+            <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
             <li><a href="#" class="a-foo">Cursos</a></li>
           </ul>
         </div>
@@ -64,30 +62,27 @@
           <h4>Obtener ayuda</h4>
           <ul class="ul-foo">
             <li><a href="#" class="a-foo">FAQ</a></li>
-            <li><a href="#" class="a-foo">Precios</a></li>
             <li><a href="#" class="a-foo">Reportar pago</a></li>
-            <li><a href="#" class="a-foo">Consultar notas</Canvas></a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Registrarse</h4>
           <ul class="ul-foo">
-            <li><a href="#" class="a-foo">Registrarse</a></li>
-            <li><a href="#" class="a-foo">Iniciar Secion</a></li>
-            <li><a href="#" class="a-foo">Plataforma online</a></li>
+            <li><a href="registro.html" class="a-foo">Registrarse</a></li>
+            <li><a href="login.html" class="a-foo">Iniciar Sesión</a></li>
           </ul>
-          </div>
-            <div class="footer-col">
-              <h4>Siguenos</h4>
-              <div class="social-links">
-                <a href="#" class="a-foo"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="a-foo"><i class="fab fa-whatsapp"></i></a>
-              </div>
-            </div>
+        </div>
+        <div class="footer-col">
+          <h4>Siguenos</h4>
+          <div class="social-links">
+            <a href="#" class="a-foo"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="a-foo"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="a-foo"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="a-foo"><i class="fab fa-whatsapp"></i></a>
           </div>
         </div>
-      </footer>
+      </div>
+    </div>
+  </footer> 
 </body>
 </html>
