Crud de cursos modificado
El crud de cursos ahora es mas completo

--- a/Login.html
+++ b/Login.html
@@ -40,7 +40,7 @@
   <div class="Fondo-Blanco"> 
             <h1 class="Login-Texto"> Ingresa tus datos</h1>
                 <form class="Formulario" method="POST" onsubmit="return false">
-                        <input type="number" inputMode="numeric" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" placeholder="Cedúla" id="Cedula" name="Cedula" required placeholder="Ingrese Cedula" oninvalid="setCustomValidity('Ingrese Cedula')"
+                        <input type="number" inputMode="numeric" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" placeholder="Cédula" id="Cedula" name="Cedula" required placeholder="Ingrese Cedula" oninvalid="setCustomValidity('Ingrese Cedula')"
                         oninput="this.setCustomValidity('')"></input>
                         <input type="password" placeholder="Contraseña" id="Contraseña" name="Contra"required placeholder="Ingrese Contraseña" oninvalid="setCustomValidity('Ingrese Contraseña')"
                         oninput="this.setCustomValidity('')"></input>
