Cambios en el correo de recuperacion
Ahora usa un correo distinto para enviar el correo de recuperacion

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="element"><a href="Login.html" class="a-menu">Iniciar sesión</a></li>
             <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
             <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
-            <li class="element"><a href=# class="a-menu">FAQ</a></li>
+            <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
           </ul>
         </nav>
       </header>
