--- a/acercaDe.html
+++ b/acercaDe.html
@@ -25,7 +25,7 @@
         <ul class="elements">
           <li class="element"><a href="index.html" class="a-menu">Home</a></li>
           <li class="element"><a href=# class="a-menu">Cursos</a></li>
-          <li class="element"><a href=Login.html class="a-menu">Iniciar sesión</a></li>
+          <li class="element"><a href=Login.php class="a-menu">Iniciar sesión</a></li>
           <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
           <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
           <li class="element"><a href=# class="a-menu">FAQ</a></li>
@@ -69,7 +69,7 @@
           <h4>Registrarse</h4>
           <ul class="ul-foo">
             <li><a href="registro.html" class="a-foo">Registrarse</a></li>
-            <li><a href="login.html" class="a-foo">Iniciar Sesión</a></li>
+            <li><a href="login.php" class="a-foo">Iniciar Sesión</a></li>
           </ul>
         </div>
         <div class="footer-col">
