--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,7 @@
             <ul class="elements">
               <li class="element"><a href="index.html" class="a-menu">Home</a></li>
               <li class="element"><a href="#" class="a-menu">Cursos</a></li>
-              <li class="element"><a href="Login.html" class="a-menu">Iniciar sesión</a></li>
+              <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
               <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
               <li class="element"><a href="#" class="a-menu">FAQ</a></li>
@@ -42,127 +42,101 @@
     <br>
     <br>
     <main>
-        <h1 class="faq-heading">Preguntas frecuentes</h1>
-        
-        <section class="faq-container">
-            <div class="faq-one">
+      <h1 class="faq-heading">Preguntas frecuentes</h1>
+      
+      <section class="faq-container">
+          <div class="faq-one">
 
-                <!-- faq question -->
-                <h1 class="faq-page">What is an FAQ Page?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Qué idiomas se ofrecen en los cursos?</h1>
 
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
+              <!-- faq answer -->
+              <div class="faq-body">
+                  <p>Ofrecemos cursos de inglés, italiano y portugués.</p>
+              </div>
+          </div>
+          <hr class="hr-line">
 
-            <div class="faq-two">
+          <div class="faq-two">
 
-                <!-- faq question -->
-                <h1 class="faq-page">Why do you need an FAQ page?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Cómo puedo inscribirme en un curso?</h1>
 
-                <!-- faq answer -->
+              <!-- faq answer -->
 
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
+              <div class="faq-body">
+                  <p>Puedes inscribirte en un curso siguiendo estos pasos:
+                    Visita nuestra página web y crea una cuenta.
+                    Explora los cursos disponibles y selecciona el que más te interese.
+                    Haz clic en "Inscribirme" y sigue las instrucciones para completar el proceso de inscripción.</p>
+              </div>
+          </div>
+          <hr class="hr-line">
 
 
-            <div class="faq-three">
+          <div class="faq-three">
 
-                <!-- faq question -->
-                <h1 class="faq-page">Does it improves the user experience of a website?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Cuáles son las formas de pago aceptadas?</h1>
 
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
+              <!-- faq answer -->
+              <div class="faq-body">
+                  <p>Aceptamos pagos con tarjeta de crédito y débito a través de nuestra plataforma segura de pago en línea.</p>
+              </div>
+          </div>
+          <hr class="hr-line">
 
-            <div class="faq-three">
+          <div class="faq-three">
 
-                <!-- faq question -->
-                <h1 class="faq-page">Does it improves the user experience of a website?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Cómo puedo reportar mi pago después de realizarlo?</h1>
 
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="faq-three">
+              <!-- faq answer -->
+              <div class="faq-body">
+                  <p>Después de realizar tu pago, puedes reportarlo siguiendo estos pasos:
+                    Inicia sesión en tu cuenta en nuestra aplicación web.
+                    Ve a la sección "Mis cursos" o "Mi perfil".
+                    Busca la opción "Reportar pago" y proporciona los detalles requeridos, como el monto y la fecha del pago.</p>
+              </div>
+          </div>
+          <hr class="hr-line">
+          <div class="faq-three">
 
-                <!-- faq question -->
-                <h1 class="faq-page">Does it improves the user experience of a website?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Cómo accedo al material del curso?</h1>
 
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="faq-three">
+              <!-- faq answer -->
+              <div class="faq-body">
+                  <p>Una vez que te hayas inscrito en un curso, podrás acceder al material del curso siguiendo estos pasos:
+                    Inicia sesión en tu cuenta en nuestra aplicación web.
+                    Ve a la sección "Mis cursos" o "Mi perfil".
+                    Encuentra el curso en el que estás inscrito y haz clic en él para acceder al material, que puede incluir lecciones, ejercicios y recursos adicionales.</p>
+              </div>
+          </div>
+          <hr class="hr-line">
+          <div class="faq-three">
 
-                <!-- faq question -->
-                <h1 class="faq-page">Does it improves the user experience of a website?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Puedo cambiar de curso después de inscribirme?</h1>
 
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="faq-three">
+              <!-- faq answer -->
+              <div class="faq-body">
+                  <p>Sí, puedes solicitar un cambio de curso si deseas cambiar a otro curso disponible. Ponte en contacto con nuestro equipo de soporte al cliente para obtener más información sobre el proceso de cambio de curso.</p>
+              </div>
+          </div>
+          <hr class="hr-line">
+          <div class="faq-three">
 
-                <!-- faq question -->
-                <h1 class="faq-page">Does it improves the user experience of a website?</h1>
+              <!-- faq question -->
+              <h1 class="faq-page">¿Cómo puedo contactar al equipo de soporte al cliente?</h1>
 
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-            <hr class="hr-line">
-            <div class="faq-three">
-
-                <!-- faq question -->
-                <h1 class="faq-page">Does it improves the user experience of a website?</h1>
-
-                <!-- faq answer -->
-                <div class="faq-body">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
-                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
-                        aperiam.
-                        Perspiciatis, porro!</p>
-                </div>
-            </div>
-        </section>
-    </main>
+              <!-- faq answer -->
+              <div class="faq-body">
+                  <p>Puedes contactar a nuestro equipo de soporte al cliente enviando un correo electrónico a support@ejemplo.com o completando el formulario de contacto en nuestra página web. Estaremos encantados de ayudarte con cualquier pregunta o consulta que tengas.</p>
+              </div>
+          </div>
+      </section>
+  </main>
     <footer class="footer">
         <div class="container-foo">
           <div class="row">
@@ -177,14 +151,14 @@
               <h4>Obtener ayuda</h4>
               <ul class="ul-foo">
                 <li><a href="#" class="a-foo">FAQ</a></li>
-                <li><a href="#" class="a-foo">Reportar pago</a></li>
+                <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
               </ul>
             </div>
             <div class="footer-col">
               <h4>Registrarse</h4>
               <ul class="ul-foo">
                 <li><a href="registro.html" class="a-foo">Registrarse</a></li>
-                <li><a href="login.html" class="a-foo">Iniciar Sesión</a></li>
+                <li><a href="logeo.php" class="a-foo">Iniciar Sesión</a></li>
               </ul>
             </div>
             <div class="footer-col">
