--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <ul class="elements">
             <li class="element"><a href="index.html" class="a-menu">Home</a></li>
             <li class="element"><a href="#" class="a-menu">Cursos</a></li>
-            <li class="element"><a href="Login.html" class="a-menu">Iniciar sesión</a></li>
+            <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
             <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
             <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
             <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
@@ -65,7 +65,7 @@
           </figure>
           <div class="contenido">
             <h3>Aprende Italiano</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>¡Aprende italiano de forma divertida y fácil! Esta es tu oportunidad para mejorar tu italiano. Ofrecemos un curso interactivo, divertido y fácil de seguir, adaptado a todos los niveles. Nuestros profesores profesionales te ayudarán a mejorar tu comprensión y habilidades de italiano. ¡Únete a nosotros para aprovechar al máximo esta oportunidad única!</p>
             <a href="#">Leer mas</a>
           </div>
         </div>
@@ -75,7 +75,7 @@
           </figure>
           <div class="contenido">
             <h3>Aprende Ingles</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>¡Mejora tus habilidades de inglés de forma divertida y fácil! Esta es tu oportunidad para mejorar tu inglés. ¡Únete a nosotros para aprovechar al máximo esta oportunidad única! Nuestro curso incluye ejercicios de práctica y recursos especializados. ¡Únete ahora y comienza tu viaje hacia una mejor comprensión del inglés!</p>
             <a href="#">Leer mas</a>
           </div>
         </div>
@@ -85,7 +85,7 @@
           </figure>
           <div class="contenido">
             <h3>Aprende Portugues</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>¡Mejora tu portugués y descubre cultura! Esta es tu oportunidad de mejorar tu portugués y disfrutar de una experiencia única. Ofrecemos un curso interactivo, divertido y fácil de seguir, adaptado a todos los niveles. Nuestros profesionales te ayudarán a mejorar tu comprensión y habilidades de portugués. ¡Únete ahora para aprovechar esta oportunidad única!</p>
             <a href="#">Leer mas</a>
           </div>
         </div>
@@ -109,14 +109,14 @@
               <h4>Obtener ayuda</h4>
               <ul class="ul-foo">
                 <li><a href="#" class="a-foo">FAQ</a></li>
-                <li><a href="#" class="a-foo">Reportar pago</a></li>
+                <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
               </ul>
             </div>
             <div class="footer-col">  
               <h4>Registrarse</h4>
               <ul class="ul-foo">
                 <li><a href="registro.html" class="a-foo">Registrarse</a></li>
-                <li><a href="login.html" class="a-foo">Iniciar Sesión</a></li>
+                <li><a href="logeo.php" class="a-foo">Iniciar Sesión</a></li>
               </ul>
             </div>
             <div class="footer-col">
