--- a/Registro.html
+++ b/Registro.html
@@ -26,7 +26,7 @@
             <ul class="elements">
               <li class="element"><a href="index.html" class="a-menu">Home</a></li>
               <li class="element"><a href="#" class="a-menu">Cursos</a></li>
-              <li class="element"><a href="login.html" class="a-menu">Iniciar sesión</a></li>
+              <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
               <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
               <li class="element"><a href="#" class="a-menu">FAQ</a></li>
@@ -43,8 +43,8 @@
                 <form class="Formulario" onsubmit="return false">
                     <img src="Images/register.png" class="Registro_Imagen">
                     <div  class="Entrada-Datos-1">
-                        <input type="text" placeholder="Nombre" class="Insertar-Primero" id="Nombre" name="Nombre" required></input>
-                        <input type="text" placeholder="Apellido" class="Insertar-Primero" id="Apellido" name="Apellido"></input>
+                        <input type="text" placeholder="Nombre" onkeydown="return /[a-z]/i.test(event.key)" class="Insertar-Primero" id="Nombre" name="Nombre" required></input>
+                        <input type="text" placeholder="Apellido" onkeydown="return /[a-z]/i.test(event.key)" class="Insertar-Primero" id="Apellido" name="Apellido"></input>
                         <input type="email" placeholder="Correo" class="Insertar-Primero" id="Correo" name="Correo"></input>
                         <input type="number" oninput="this.value = this.value.replace(/[^0-9-]/g, '').replace(/(\..*?)\..*/g, '$1');" maxlength="10" inputMode="numeric" placeholder="Cédula" class="Insertar-Primero" id="Cedula" name="Cedula"></input>
                         <div class="Genero">
@@ -65,7 +65,7 @@
                         <div class="Entrada-Datos-2">
                             
                             <input type="text" placeholder="Dirección" class="Insertar-Segundo" id="Direccion" name="Direccion" maxlength="15"></input>
-                            <input type="tel" inputMode="numeric" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" placeholder="xxxx-xxxxxxx" class="Insertar-Segundo" id="Telefono" name="Telefono"></input>
+                            <input type="tel" inputMode="numeric" placeholder="xxxx-xxxxxxx" class="Insertar-Segundo" id="Telefono" name="Telefono"></input>
                             <input type="password" placeholder="Contraseña" maxlength="16" class="Insertar-Segundo" id="Contra_1" name="Contra"></input>
                             <input type="password" placeholder="Repetir Contraseña" maxlength="16" class="Insertar-Segundo" id="Contra_2"></input>    
                             <input type="date" class="Fecha-Insertar" max="2023-12-31" name="Fecha"></input>
@@ -96,14 +96,14 @@
                 <h4>Obtener ayuda</h4>
                 <ul class="ul-foo">
                   <li><a href="#" class="a-foo">FAQ</a></li>
-                  <li><a href="#" class="a-foo">Reportar pago</a></li>
+                  <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
                 </ul>
               </div>
               <div class="footer-col">
                 <h4>Registrarse</h4>
                 <ul class="ul-foo">
                   <li><a href="registro.html" class="a-foo">Registrarse</a></li>
-                  <li><a href="login.html" class="a-foo">Iniciar Sesión</a></li>
+                  <li><a href="logeo.php" class="a-foo">Iniciar Sesión</a></li>
                 </ul>
               </div>
               <div class="footer-col">
