--- a/acercaDe.html
+++ b/acercaDe.html
@@ -14,37 +14,37 @@
   <div class="menu-cont">
     <header>
       <nav class="navbar">
-        <input type="checkbox" id="check" >
+        <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
           <i class="fa-solid fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-          <img class="logo" src="assets/img/logo.png" />
+          <img class="logo" src="assets/img/logo.png">
         </a>          
         <h1 class="brand">TEXTO</h1>
         <ul class="elements">
           <li class="element"><a href="index.html" class="a-menu">Home</a></li>
-          <li class="element"><a href=# class="a-menu">Cursos</a></li>
-          <li class="element"><a href=Login.php class="a-menu">Iniciar sesión</a></li>
+          <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
+          <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
           <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
           <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
-          <li class="element"><a href=# class="a-menu">FAQ</a></li>
+          <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
         </ul>
-        
       </nav>
     </header>
   </div>
   <div class="heading">
     <h1 class="about-h1">Sobre nosotros</h1>
-    <p class="about-p">Lorem, ipsum dolor sit amet consectetur adipisici</p>
+    <p class="about-p">Somos una empresa dedicada a impartir cursos de idiomas</p>
   </div>
 
   <section class="about-us">
     <img src="assets/img/about1.jpg" alt="estudiantes Corblacerca">
     <div class="content">
-      <h2 class="about-h2">Lorem ipsum dolor sit amet consectetur</h2>
-      <p class="about-p-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus vel unde dolorem neque quidem deserunt quisquam saepe eum laboriosam non, id excepturi, adipisci velit similique optio sint voluptatum! At, dignissimos!</p>
-      <button class="read-more-btn-about">Leer mas</button>
+      <h2 class="about-h2">Corbalecerca como institución</h2>
+      <p class="about-p-content">
+        La empresa Corblacerca es una Institución privada educativa, inscrita en el Ministerio del Poder Popular para la Educación y certificada Internacionalmente por ACCET (Accrediting Council for Continuing Education and Training), situada en Maracaibo, Venezuela, dedicada a impartir adiestramiento a nivel individual, privado, empresarial y de alta gerencia, en lenguas internacionales como lo son: Inglés, Italiano Y Portugues.
+      </p>
     </div>
   </section>
   <br class="salto">
@@ -55,21 +55,21 @@
           <h4>Company</h4>
           <ul class="ul-foo">
             <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
-            <li><a href="#" class="a-foo">Cursos</a></li>
+            <li><a href="cursoslanding.html" class="a-foo">Cursos</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Obtener ayuda</h4>
           <ul class="ul-foo">
-            <li><a href="#" class="a-foo">FAQ</a></li>
-            <li><a href="#" class="a-foo">Reportar pago</a></li>
+            <li><a href="faq.html" class="a-foo">FAQ</a></li>
+            <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
           </ul>
         </div>
         <div class="footer-col">
           <h4>Registrarse</h4>
           <ul class="ul-foo">
             <li><a href="registro.html" class="a-foo">Registrarse</a></li>
-            <li><a href="login.php" class="a-foo">Iniciar Sesión</a></li>
+            <li><a href="logeo.php" class="a-foo">Iniciar Sesión</a></li>
           </ul>
         </div>
         <div class="footer-col">
