--- a/faq.html
+++ b/faq.html
@@ -30,11 +30,11 @@
             <h1 class="brand">TEXTO</h1>
             <ul class="elements">
               <li class="element"><a href="index.html" class="a-menu">Home</a></li>
-              <li class="element"><a href="#" class="a-menu">Cursos</a></li>
+              <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
               <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
               <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
-              <li class="element"><a href="#" class="a-menu">FAQ</a></li>
+              <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
             </ul>
           </nav>
         </header>
@@ -144,13 +144,13 @@
               <h4>Company</h4>
               <ul class="ul-foo">
                 <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
-                <li><a href="#" class="a-foo">Cursos</a></li>
+                <li><a href="cursoslanding.html" class="a-foo">Cursos</a></li>
               </ul>
             </div>
             <div class="footer-col">
               <h4>Obtener ayuda</h4>
               <ul class="ul-foo">
-                <li><a href="#" class="a-foo">FAQ</a></li>
+                <li><a href="faq.html" class="a-foo">FAQ</a></li>
                 <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
               </ul>
             </div>
