--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h1 class="brand">TEXTO</h1>
           <ul class="elements">
             <li class="element"><a href="index.html" class="a-menu">Home</a></li>
-            <li class="element"><a href="#" class="a-menu">Cursos</a></li>
+            <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
             <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
             <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
             <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
@@ -57,6 +57,12 @@
             <a href="#item-1" class="arrow-next arrow"></a>
           </div>
         </div>
+
+      </div>
+      <div id="p" class="paragraf">
+        <p>Como empresa dedicada a la enseñanza de idiomas en inglés, italiano y portugués, nuestro objetivo principal es crear un ambiente de aprendizaje cómodo y agradable para nuestros estudiantes. Hemos adquirido una gran cantidad de experiencia ofreciendo cursos presenciales y en línea, siempre ajustándonos a las necesidades y los objetivos individuales de cada estudiante. Nuestro equipo docente está altamente capacitado y siempre está dispuesto a proporcionar apoyo y orientación para ayudar a nuestros estudiantes a mejorar sus habilidades lingüísticas. Nos apasiona enseñar idiomas y nuestro objetivo final es ver a nuestros estudiantes alcanzar sus metas lingüísticas.</p>
+      </div>
+
       </div>
       <div class="container">
         <div class="card">
@@ -102,13 +108,13 @@
               <h4>Company</h4>
               <ul class="ul-foo">
                 <li><a href="acercaDe.html" class="a-foo">Sobre nosotros</a></li>
-                <li><a href="#" class="a-foo">Cursos</a></li>
+                <li><a href="cursoslanding.html" class="a-foo">Cursos</a></li>
               </ul>
             </div>
             <div class="footer-col">
               <h4>Obtener ayuda</h4>
               <ul class="ul-foo">
-                <li><a href="#" class="a-foo">FAQ</a></li>
+                <li><a href="faq.html" class="a-foo">FAQ</a></li>
                 <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
               </ul>
             </div>
