--- a/acercaDe.html
+++ b/acercaDe.html
@@ -21,7 +21,7 @@
         <a href="#" class="enlace">
           <img class="logo" src="assets/img/logo.png">
         </a>          
-        <h1 class="brand">TEXTO</h1>
+        <h1 class="brand">CORBLASERCA</h1>
         <ul class="elements">
           <li class="element"><a href="index.html" class="a-menu">Home</a></li>
           <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
