--- a/cursoslanding.html
+++ b/cursoslanding.html
@@ -21,11 +21,11 @@
             <a href="#" class="enlace">
               <img class="logo" src="assets/img/logo.png">
             </a>          
-            <h1 class="brand">TEXTO</h1>
+            <h1 class="brand">CORBLASERCA</h1>
             <ul class="elements">
               <li class="element"><a href="index.html" class="a-menu">Home</a></li>
               <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
-              <li class="element"><a href="Login.html" class="a-menu">Iniciar sesión</a></li>
+              <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
               <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
               <li class="element"><a href="#" class="a-menu">FAQ</a></li>
