--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@
             <a href="#" class="enlace">
               <img class="logo" src="assets/img/logo.png">
             </a>          
-            <h1 class="brand">TEXTO</h1>
+            <h1 class="brand">CORBLASERCA</h1>
             <ul class="elements">
               <li class="element"><a href="index.html" class="a-menu">Home</a></li>
               <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
@@ -135,6 +135,21 @@
                   <p>Puedes contactar a nuestro equipo de soporte al cliente enviando un correo electrónico a support@ejemplo.com o completando el formulario de contacto en nuestra página web. Estaremos encantados de ayudarte con cualquier pregunta o consulta que tengas.</p>
               </div>
           </div>
+
+          <div class="faq-three">
+
+            <!-- faq question -->
+            <h1 class="faq-page">¿Donde puedo descargar los manuales de usuario y manual de instructivos?</h1>
+
+            <!-- faq answer -->
+            <div class="faq-body">
+                <p>Puedes descargar ambos manuales en los siguientes links.</p>
+                <p>Manual de usuario.</p>
+                <p>Manual de instructivos.</p>
+
+            </div>
+            <br><br>
+        </div>
       </section>
   </main>
     <footer class="footer">
