--- a/cursoslanding.html
+++ b/cursoslanding.html
@@ -26,9 +26,9 @@
               <li class="element"><a href="index.html" class="a-menu">Home</a></li>
               <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
               <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
-              <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
+              <li class="element"><a href="metodosPago.html" class="a-menu">Inscribir</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
-              <li class="element"><a href="#" class="a-menu">FAQ</a></li>
+              <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
             </ul>
           </nav>
         </header>
@@ -92,14 +92,14 @@
               <h4>Obtener ayuda</h4>
               <ul class="ul-foo">
                 <li><a href="faq.html" class="a-foo">FAQ</a></li>
-                <li><a href="#" class="a-foo">Reportar pago</a></li>
+                <li><a href="logeo.php" class="a-foo">Reportar pago</a></li>
               </ul>
             </div>
             <div class="footer-col">
               <h4>Registrarse</h4>
               <ul class="ul-foo">
                 <li><a href="registro.html" class="a-foo">Registrarse</a></li>
-                <li><a href="login.html" class="a-foo">Iniciar Sesión</a></li>
+                <li><a href="logeo.php" class="a-foo">Iniciar Sesión</a></li>
               </ul>
             </div>
             <div class="footer-col">
