--- a/Recuperar.html
+++ b/Recuperar.html
@@ -18,15 +18,15 @@
             <label for="check" class="checkbtn">
               <i class="fa-solid fa-bars"></i>
             </label>
-            <a href="#" class="enlace">
+            <a href="index.html" class="enlace">
               <img class="logo" src="assets/img/logo.png" />
             </a>          
-            <h1 class="brand">CORBLASERCA</h1>
+            <h1 class="brand"><span class="color-change">CORBLA</span>SERCA</h1>
             <ul class="elements">
-              <li class="element"><a href="index.html" class="a-menu">Home</a></li>
+              <li class="element"><a href="index.html" class="a-menu">Inicio</a></li>
               <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
               <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
-              <li class="element"><a href="metodosPago.html" class="a-menu">Inscribir</a></li>
+              <li class="element"><a href="metodosPago.html" class="a-menu">Métodos de pago</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
               <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
             </ul>
