--- a/metodosPago.html
+++ b/metodosPago.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/styles/css/Navbar.css">
     <link rel="stylesheet" href="assets/styles/css/footerdef.css">
     <link rel="stylesheet" href="assets/styles/css/metodos.css">
-    <title>Document</title>
+    <title>Metodos de Pago</title>
 </head>
 <body>
     <div class="menu-cont">
@@ -16,15 +16,15 @@
             <label for="check" class="checkbtn">
               <i class="fa-solid fa-bars"></i>
             </label>
-            <a href="#" class="enlace">
+            <a href="index.html" class="enlace">
               <img class="logo" src="assets/img/logo.png">
             </a>          
-            <h1 class="brand">TEXTO</h1>
+            <h1 class="brand"><span class="color-change">CORBLA</span>SERCA</h1>
             <ul class="elements">
-              <li class="element"><a href="index.html" class="a-menu">Home</a></li>
+              <li class="element"><a href="index.html" class="a-menu">Inicio</a></li>
               <li class="element"><a href="cursoslanding.html" class="a-menu">Cursos</a></li>
               <li class="element"><a href="logeo.php" class="a-menu">Iniciar sesión</a></li>
-              <li class="element"><a href="payment.html" class="a-menu">Inscribir</a></li>
+              <li class="element"><a href="metodosPago.html" class="a-menu">Métodos de pago</a></li>
               <li class="element"><a href="acercaDe.html" class="a-menu">Acerca de nosotros</a></li>
               <li class="element"><a href="faq.html" class="a-menu">FAQ</a></li>
             </ul>
@@ -38,11 +38,11 @@
             </div>
             <div class="pagomovil">
                 <img class="img" src="assets/img/pagomovl.jpg" alt="">
-                <h2 id="titulo-met">Pago movil</h2>
+                <h2 id="titulo-met">Pago móvil</h2>
                 <p id="parrafo-met">
                     Sebastian Torres<br>
-                    V-30.423.882 <br>
-                    telf: 0424-6802599<br>
+                    J-123456789<br>
+                    Telf: 0424-6802599<br>
                     Banco de Venezuela
                 </p>
             </div>
@@ -51,7 +51,7 @@
                 <h2 id="titulo-met">Cuenta bancaria</h2>
                 <p id="parrafo-met">Banco de Venezuela <br>
                 01020160830000732682 <br>
-                V-30.423.882</p>
+                J-123456789</p>
     
             </div>
         </div>
