Try y catch sql

--- a/faq.html
+++ b/faq.html
@@ -139,7 +139,7 @@
           <div class="faq-three">
 
             <!-- faq question -->
-            <h1 class="faq-page">¿Dónde puedo visualizar los manuales de usuario y manual de instructivos?</h1>
+            <h1 class="faq-page">¿Dónde puedo visualizar los manuales de usuario y manual de analista?</h1>
 
             <!-- faq answer -->
             <div class="faq-body">
